# maggie_devices_msgs

./: AUTHORS.md  README.md
eyelids_msgs/: AUTHORS.md  CHANGELOG.rst  README.md  package.xml
eyelids_msgs/msg/: EyelidPositions.msg
eyelids_msgs/srv/: MoveStrPos.srv
ir_controller_msgs/: AUTHORS.md  CHANGELOG.rst  README.md  package.xml
ir_controller_msgs/msg/: GetTvAction.msg
ir_controller_msgs/srv/: SetTvAction.srv
maggie_devices_msgs/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_eyelids_msgs/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_ir_controller_msgs/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_ir_controller_msgs/msg/: TvActions.msg
maggie_ir_controller_msgs/srv/: SetTvAction.srv
maggie_motor_controller_msgs/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
maggie_motor_controller_msgs/msg/: Data.msg  Odometry.msg
maggie_motor_controller_msgs/srv/: Calibration.srv  Configuration.srv  MoveAbsPos.srv
maggie_rfid_msgs/: AUTHORS.md  CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
motor_controller_msgs/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
motor_controller_msgs/msg/: Data.msg  Odometry.msg
motor_controller_msgs/srv/: MoveAbsPos.srv
rfid_msgs/: AUTHORS.md  CMakeLists.txt  README.md  package.xml
rfid_msgs/msg/: RfidTag.msg
rfid_msgs/srv/: WriteCard.srv
