<?xml version="1.0"?>
<package format="2">
    <name>maggie_motor_controller_msgs</name>
    <version>0.0.2</version>
    <description>
        motor_controller messages and services
    </description>

    <!-- Author tags are optional, mutiple are allowed, one per tag -->
    <!-- Authors do not have to be maintianers, but could be -->
    <author email="raul.perula@uc3m.es">Raul Perula-Martinez</author>
    

    <!-- One maintainer tag required, multiple allowed, one person per tag -->
    <maintainer email="raul.perula@uc3m.es">Raul Perula-Martinez</maintainer>


    <!-- One license tag required, multiple allowed, one license per tag -->
    <license>LEUC3M v1.0</license>


    <!-- Url tags are optional, but mutiple are allowed, one per tag -->
    <url type="website">http://wiki.ros.org/motor_controller_msgs</url>
    <url type="bugtracker">https://github.com/UC3MSocialRobots/maggie_devices_msgs/issues</url>
    <url type="repository">https://github.com/UC3MSocialRobots/maggie_devices_msgs.git</url>


    <!-- The *_depend tags are used to specify dependencies -->
    <!-- Dependencies can be catkin packages or system dependencies -->
    <buildtool_depend>catkin</buildtool_depend>

    <!-- ROS packages dependencies -->
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
</package>
